--- a/MySandboxApp.Dal/MySandboxApp.Dal.csproj
+++ b/MySandboxApp.Dal/MySandboxApp.Dal.csproj
@@ -14,4 +14,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MySandBoxApp.Core\MySandBoxApp.Core.csproj" />
+  </ItemGroup>
+
 </Project>
