--- a/MysandBoxApp/appsettings.json
+++ b/MysandBoxApp/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "JwtSetings": {
+    "Issuer": "MySandBoxIssuer",
+    "Audience": "",
+    "key":""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
