--- a/MysandBoxApp/MySandBoxApp.csproj
+++ b/MysandBoxApp/MySandBoxApp.csproj
@@ -12,15 +12,14 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\MySandBoxApp.Core\MySandBoxApp.Core.csproj" />
     <ProjectReference Include="..\MySandboxApp.Dal\MySandboxApp.Dal.csproj" />
+    <ProjectReference Include="..\TeaMarketPlace.EmailService\TeaMarketPlace.EmailService.csproj" />
   </ItemGroup>
 
 </Project>
